Improve operation IDs
